# CourseCast

./: .gitignore  .prettierignore  .prettierrc.json  CLAUDE.md  Hello.py  README.md  coursematch_solver.py  csv_data_spring_2025_v2.csv  data_spring_2025.csv  data_spring_2025.xlsx  data_spring_2025_v2.xlsx  eslint.config.js  montecarlo.py  next.config.ts  package.json  pnpm-lock.yaml  requirements.txt  streamlit_app.py  tsconfig.json  z_score_table.csv
backend/: .gitignore  .pre-commit-config.yaml  README.md  config.py  logging_config.py  main.py  pyproject.toml
backend/data/: data_spring_2025.xlsx  z_score_table.xlsx
backend/models/: data_models.py  optimization_models.py  simulation_models.py
backend/services/: data_service.py  optimization_service.py  simulation_service.py
backend/tests/: test_data_service.py  test_integration.py  test_optimization_service.py  test_simulation_service.py
data/: montecarlo.py  requirements.txt  streamlit_app.py
frontend/: .gitignore  .prettierignore  eslint.config.js  next.config.js  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.js  tsconfig.tsbuildinfo  vitest.config.js  vitest.config.ts
frontend/convex/: courses.ts  seed.ts  types.ts  userScenarios.ts  users.ts
frontend/convex/_generated/: api.d.ts
frontend/convex/test/: schema.test.ts
frontend/data/: courses.jsonl  z_scores.jsonl
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: CourseCatalogTable.integration.test.tsx  CourseCatalogTable.test.tsx  CourseCatalogTable.tsx  CourseCatalogTablePaginated.integration.test.tsx  (+1 more)
pages/: 4_Course_Match.py
public/: courses.parquet  fixed.parquet
src/app/: layout.tsx  page.tsx
src/convex/: courses.ts  scenarios.ts  schema.ts  seed.ts  types.test.ts  types.ts
src/data/: courses.csv  index.ts  precompute-to-parquet.ts  util.ts
src/hooks/: use-fetch-courses.tsx
src/test/: setup.ts
web/: .prettierignore  CLAUDE.md  README.md  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.json
web/public/: 2026A-courses.parquet
(+178 files in other folders)
